Inserimento main fino a tabella

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <!-- inizio header -->
     <header>
-        <div>
+        <div id="testata">
             <img src="img/logo.svg" alt="">
         </div>
     </header>
@@ -20,18 +22,63 @@
     <main>
         <!-- sezione con titolo e immagini-->
         <section>
-            <div>
-                <h1>Internet deve essere al servizio del "bene oubblico": il manifesto di Tim Berners-Lee</h1>
-                <p>Scritto da <span>The Booleaner</span></p>
-                <p>il 10/10/2020</p>
+            <div class="section-style">
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                <h2 class="scritta-grigia">Scritto da <span id="parola_azzurra">The Booleaner</span></h2>
+                <h3 class="scritta-grigia-piccola">il 10/10/2020</h3>
                 <img src="img/tim-1.jpg" alt="">
                 <img src="img/tim-2.jpg" alt="">
-                <span>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikipedia, by Paul Clarke</span>
+                <span id="didascalia">1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikipedia, by Paul Clarke</span>
             </div>
         </section>
 
-        <!-- sezione testi -->
+        <!-- sezione testi e tabella-->
         <section>
+            <div class="section-style">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste mollitia fuga, fugit sapiente possimus eligendi sequi quisquam? Soluta fuga accusamus dolorum consequuntur amet perferendis rem quibusdam eius? Voluptates, necessitatibus laboriosam.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="fondo-giallo"> Atque corporis excepturi, rem autem ipsa sint, ratione error ex iure similique libero iste enim repellat necessitatibus assumenda.</span> Qui voluptatum blanditiis ad?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eius perferendis officiis optio atque fugiat, autem minus nesciunt eaque incidunt voluptates omnis cupiditate veniam, dignissimos explicabo deserunt ipsam itaque est.
+                </p>
+
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, nam excepturi est eius nesciunt, laudantium cum atque ipsum vel ex impedit, libero ad molestias consequatur voluptatum obcaecati tempore omnis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, nam excepturi est eius nesciunt, laudantium cum atque ipsum vel ex impedit, libero ad molestias consequatur voluptatum obcaecati tempore omnis.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, nam excepturi est eius nesciunt, laudantium cum atque ipsum vel ex impedit, libero ad molestias consequatur voluptatum obcaecati tempore omnis.</li>
+                </ul>
+
+                <!-- inizio tabella -->
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Lorem ispum dolor</th>
+                            <th>Lorem ispum dolor</th>
+                            <th>Lorem ispum dolor</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque harum eum delectus totam fuga? Amet praesentium fuga commodi tempore ex! Culpa adipisci aperiam ullam repellendus quos eum suscipit voluptas aliquam.</td>
+                        </tr>
+
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque harum eum delectus totam fuga? Amet praesentium fuga commodi tempore ex! Culpa adipisci aperiam ullam repellendus quos eum suscipit voluptas aliquam.</td>
+                        </tr>
+
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque harum eum delectus totam fuga? Amet praesentium fuga commodi tempore ex! Culpa adipisci aperiam ullam repellendus quos eum suscipit voluptas aliquam.</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- fine tabella -->
+            </div>
         </section>
 
 
