--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
     <main>
         <!-- sezione con titolo e immagini-->
         <section>
-            <div class="section-style">
+            <div>
                 <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-                <h2 class="scritta-grigia">Scritto da <span id="parola_azzurra">The Booleaner</span></h2>
-                <h3 class="scritta-grigia-piccola">il 10/10/2020</h3>
-                <img src="img/tim-1.jpg" alt="">
-                <img src="img/tim-2.jpg" alt="">
+                <h2>Scritto da <span id="parola_azzurra">The Booleaner</span>
+                    <br>
+                    <span id="data">il 10/10/2020</span>
+                </h2>
+                <img src="img/tim-1.jpg" class="tim" alt="">
+                <img src="img/tim-2.jpg" class="tim" alt="">
                 <span id="didascalia">1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikipedia, by Paul Clarke</span>
             </div>
         </section>
 
         <!-- sezione testi e tabella-->
         <section>
-            <div class="section-style">
+            <div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste mollitia fuga, fugit sapiente possimus eligendi sequi quisquam? Soluta fuga accusamus dolorum consequuntur amet perferendis rem quibusdam eius? Voluptates, necessitatibus laboriosam.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="fondo-giallo"> Atque corporis excepturi, rem autem ipsa sint, ratione error ex iure similique libero iste enim repellat necessitatibus assumenda.</span> Qui voluptatum blanditiis ad?
@@ -51,14 +53,14 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Lorem ispum dolor</th>
-                            <th>Lorem ispum dolor</th>
-                            <th>Lorem ispum dolor</th>
+                            <th class="colonna-stretta"><strong>Lorem ipsum dolor</strong></th>
+                            <th class="colonna-stretta"><strong>Lorem ipsum dolor</strong></th>
+                            <th class="colonna-larga"><strong>Lorem ipsum dolor</strong></th>  
                         </tr>
                     </thead>
 
                     <tbody>
-                        <tr>
+                        <tr class="fondo-azzurro">
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque harum eum delectus totam fuga? Amet praesentium fuga commodi tempore ex! Culpa adipisci aperiam ullam repellendus quos eum suscipit voluptas aliquam.</td>
@@ -70,7 +72,7 @@
                             <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque harum eum delectus totam fuga? Amet praesentium fuga commodi tempore ex! Culpa adipisci aperiam ullam repellendus quos eum suscipit voluptas aliquam.</td>
                         </tr>
 
-                        <tr>
+                        <tr class="fondo-azzurro">
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor</td>
                             <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque harum eum delectus totam fuga? Amet praesentium fuga commodi tempore ex! Culpa adipisci aperiam ullam repellendus quos eum suscipit voluptas aliquam.</td>
@@ -78,13 +80,29 @@
                     </tbody>
                 </table>
                 <!-- fine tabella -->
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste mollitia fuga, fugit sapiente possimus eligendi sequi quisquam? Soluta fuga accusamus dolorum consequuntur amet perferendis rem quibusdam eius? Voluptates, necessitatibus laboriosam.
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="fondo-giallo"> Atque corporis excepturi, rem autem ipsa sint, ratione error ex iure similique libero iste enim repellat necessitatibus assumenda.</span> Qui voluptatum blanditiis ad?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eius perferendis officiis optio atque fugiat, autem minus nesciunt eaque incidunt voluptates omnis cupiditate veniam, dignissimos explicabo deserunt ipsam itaque est.
+                </p>
             </div>
         </section>
-
-
-
-
     </main>
     <!-- fine main -->
+
+    <!-- inizio footer -->
+    <footer>
+        <h2>Potrebbero interessarti</h2>
+        
+        <div class="box1">
+           <strong>Lorem ipsum dolor</strong> 
+        </div>
+
+        <div class="box2">
+            <strong>Lorem ipsum dolor</strong>
+        </div>
+    </footer>
+    <!-- fine footer -->
 </body>
 </html>
