--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         <section>
             <div>
                 <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-                <h2>Scritto da <span id="parola_azzurra">The Booleaner</span>
+                <p class="grey-text">Scritto da <a href="#" id="author-link">The Booleaner</a>
                     <br>
-                    <span id="data">il 10/10/2020</span>
-                </h2>
+                    <span class="small-text"></span>
+                    il 10/10/2020
+                </p>
                 <img src="img/tim-1.jpg" class="tim" alt="">
                 <img src="img/tim-2.jpg" class="tim" alt="">
                 <span id="didascalia">1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikipedia, by Paul Clarke</span>
@@ -37,7 +38,7 @@
         <!-- sezione testi e tabella-->
         <section>
             <div>
-                <p>
+                <p class="testo">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste mollitia fuga, fugit sapiente possimus eligendi sequi quisquam? Soluta fuga accusamus dolorum consequuntur amet perferendis rem quibusdam eius? Voluptates, necessitatibus laboriosam.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="fondo-giallo"> Atque corporis excepturi, rem autem ipsa sint, ratione error ex iure similique libero iste enim repellat necessitatibus assumenda.</span> Qui voluptatum blanditiis ad?
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eius perferendis officiis optio atque fugiat, autem minus nesciunt eaque incidunt voluptates omnis cupiditate veniam, dignissimos explicabo deserunt ipsam itaque est.
@@ -81,7 +82,7 @@
                 </table>
                 <!-- fine tabella -->
 
-                <p>
+                <p class="testo">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste mollitia fuga, fugit sapiente possimus eligendi sequi quisquam? Soluta fuga accusamus dolorum consequuntur amet perferendis rem quibusdam eius? Voluptates, necessitatibus laboriosam.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="fondo-giallo"> Atque corporis excepturi, rem autem ipsa sint, ratione error ex iure similique libero iste enim repellat necessitatibus assumenda.</span> Qui voluptatum blanditiis ad?
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Et eius perferendis officiis optio atque fugiat, autem minus nesciunt eaque incidunt voluptates omnis cupiditate veniam, dignissimos explicabo deserunt ipsam itaque est.
@@ -93,7 +94,9 @@
 
     <!-- inizio footer -->
     <footer>
-        <h2>Potrebbero interessarti</h2>
+        <h4 class="grey-text">
+                Potrebbero interessarti
+        </h4>
         
         <div class="box1">
            <strong>Lorem ipsum dolor</strong> 
